# TinyCpuProject

./: Assembler.cpp  CMakeLists.txt  README.md  main  main.cpp  program.asm
src/Assembler/: Assembler.hpp
src/Assembler/OpCodes/: OpCodes.cpp  OpCodes.h
src/TinyCpu/: TinyCpu.cpp  TinyCpu.hpp
